--- a/build-test/app/build.gradle
+++ b/build-test/app/build.gradle
@@ -13,6 +13,17 @@ def getGitHash = { ->
     }
     return stdout.toString().trim()
 }
+def getGitBranch = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--abbrev-ref', 'HEAD'
+        standardOutput = stdout
+    }
+    def branch = stdout.toString().trim()
+    if(branch.contains("release/") || branch == "master")
+        return ""
+    else return "dev"
+}
 
 android {
     compileSdkVersion 29
@@ -25,6 +36,7 @@ android {
         versionName config.version
 
         buildConfigField "String", "COMMIT_HASH", "\"${getGitHash()}\""
+        buildConfigField "String", "GIT_BRANCH", "\"${getGitBranch()}\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
