--- a/pdf-downloader/app/build.gradle
+++ b/pdf-downloader/app/build.gradle
@@ -31,7 +31,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
 }
