--- a/pdf-downloader/app/build.gradle
+++ b/pdf-downloader/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
