[BuildConfig] Add product flavor and filter demoRelease

--- a/BuildConfig/app/build.gradle
+++ b/BuildConfig/app/build.gradle
@@ -21,6 +21,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "version"
+    productFlavors {
+        demo {
+            dimension "version"
+            applicationIdSuffix ".demo"
+            versionNameSuffix "-demo"
+        }
+        full {
+            dimension "version"
+            applicationIdSuffix ".full"
+            versionNameSuffix "-full"
+        }
+    }
+    variantFilter { variant ->
+        def name = variant.name
+        if(name == "demoRelease") {
+            setIgnore(true)
+        }
+    }
 }
 
 dependencies {
