[BuildConfig] Jk I need prod flavor cause it doesn't build it without it

--- a/BuildConfig/app/build.gradle
+++ b/BuildConfig/app/build.gradle
@@ -36,6 +36,9 @@ android {
         lower {
             dimension "api"
         }
+        prod {
+            dimension "api"
+        }
         custom {
             dimension "api"
         }
