[graphql] impl in mem lrucache

--- a/graphql/app/build.gradle
+++ b/graphql/app/build.gradle
@@ -47,5 +47,9 @@ dependencies {
 
     // graphql
     implementation "com.apollographql.apollo:apollo-runtime:$apollo_version"
+    implementation("com.apollographql.apollo:apollo-normalized-cache:$apollo_version")
     implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
+
+    // okhttp
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
 }
