--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.3.72"
     ext.apollo_version = '2.2.1'
     ext.koin_version = '2.1.6'
+    ext.nav_version = '2.3.0'
     repositories {
         google()
         jcenter()
