--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.apollo_version = '2.2.1'
     ext.koin_version = '2.1.6'
     ext.nav_version = '2.3.0'
+    ext.arrow_version = '0.10.5'
     repositories {
         google()
         jcenter()
